# lipi

./: .gitignore  Cargo.toml
lipi-cli/: Cargo.toml
lipi-cli/src/: config.rs  main.rs
lipi-cli/src/commands/: generate.rs  init.rs  log.rs  mod.rs
lipi-contracts/: Cargo.toml
lipi-contracts/src/: lib.rs
lipi-server/: Cargo.toml
lipi-server/src/: main.rs
lipi-server/src/domain/: mod.rs
lipi-server/src/infrastructure/: backboard_engine.rs  mod.rs
lipi-server/src/routes/: generate.rs  logs.rs  mod.rs
